[package]
name = "rutool"
version = "0.1.0"
edition = "2021"
authors = ["yimiliya <yimiliya@example.com>"]
description = "A comprehensive Rust utility library inspired by Hutool"
license = "MIT OR Apache-2.0"
keywords = ["utilities", "tools", "helper", "library"]
categories = ["development-tools", "text-processing", "encoding", "cryptography"]
repository = "https://github.com/yimiliya/rutool"
documentation = "https://docs.rs/rutool"
readme = "README.md"
rust-version = "1.70"

[features]
default = ["full"]
full = [
    "core",
    "crypto",
    "http",
    "json",
    "cache",
    "db",
    "cron",
    "extra",
]
core = ["chrono"]
crypto = ["aes-gcm", "rsa", "sha2", "md-5", "hmac", "pbkdf2"]
http = ["reqwest", "tokio", "futures", "url"]
json = ["serde", "serde_json"]
cache = []
db = ["sqlx", "tokio"]
cron = ["tokio", "chrono"]
extra = ["image", "qrcode", "zip"]

[dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
regex = "1.10"
lazy_static = "1.4"
itertools = "0.12"
rayon = "1.8"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"], optional = true }
base64 = "0.21"
urlencoding = "2.1"
hex = "0.4"

# Optional dependencies
tokio = { version = "1.0", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
futures = { version = "0.3", optional = true }
url = { version = "2.5", optional = true }

# Crypto dependencies
aes-gcm = { version = "0.10", optional = true }
rsa = { version = "0.9", features = ["sha2"], optional = true }
sha2 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
pbkdf2 = { version = "0.12", optional = true }

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql"], optional = true }

# Extra dependencies
image = { version = "0.24", optional = true }
qrcode = { version = "0.13", optional = true }
zip = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.4"
tempfile = "3.10"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "rutool"
path = "src/lib.rs"
