[package]
name = "yimi-rutool"
version = "0.2.4"
edition = "2024"
authors = ["ViewWay <ViewWay@example.com>"]
description = "A comprehensive Rust utility library inspired by Hutool"
license = "MIT OR Apache-2.0"
keywords = ["utilities", "tools", "helper", "library"]
categories = ["development-tools", "text-processing", "encoding", "cryptography"]
repository = "https://github.com/ViewWay/yimi-rutool"
documentation = "https://docs.rs/yimi-rutool"
readme = "README.md"
rust-version = "1.89"

[features]
default = ["full"]
full = [
    "core",
    "crypto",
    "http",
    "json",
    "cache",
    "db",
    "cron",
    "extra",
    "jwt",
    "algorithms",
    "text",
]
core = ["rand", "chrono"]
crypto = ["aes-gcm", "rsa", "sha2", "md-5", "hmac", "pbkdf2"]
http = ["reqwest", "tokio", "futures", "url"]
json = ["serde", "serde_json"]
cache = []
db = ["sqlx", "tokio"]
cron = ["tokio", "chrono"]
extra = ["image", "qrcode", "zip", "flate2"]
jwt = ["jsonwebtoken", "chrono", "serde", "serde_json"]
algorithms = []
text = []
integration_tests = []

[dependencies]
# Core dependencies
thiserror = "2.0.16"
anyhow = "1.0.99"
once_cell = "1.21"
regex = "1.11"
lazy_static = "1.5"
itertools = "0.14.0"
rayon = "1.11.0"
chrono = { version = "0.4", features = ["serde"], optional = true }
base64 = "0.22.1"
urlencoding = "2.1"
hex = "0.4"

# Optional dependencies
tokio = { version = "1.47", features = ["full"], optional = true }
serde = { version = "1.0.223", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
reqwest = { version = "0.12.23", features = ["json", "blocking"], optional = true }
futures = { version = "0.3", optional = true }
url = { version = "2.5", optional = true }

# Crypto dependencies
rand = { version = "0.8.5", optional = true }
aes-gcm = { version = "0.10", optional = true }
# NOTE: RUSTSEC-2023-0071 - Potential timing sidechannel in RSA operations
# This version has a known vulnerability affecting network environments
# Safe for local/development use, avoid in production network environments
rsa = { version = "0.9.8", features = ["sha2"], optional = true }
sha2 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
pbkdf2 = { version = "0.12", optional = true }

# Database dependencies
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql"], optional = true }
# Extra dependencies
image = { version = "0.25.8", optional = true }
qrcode = { version = "0.14.1", optional = true }
zip = { version = "5.1.1", optional = true }
flate2 = { version = "1.1", optional = true }

# JWT dependencies
jsonwebtoken = { version = "9.3", optional = true }

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7"
tempfile = "3.22"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "yimi_rutool"
path = "src/lib.rs"
